2001-01-30  Havoc Pennington  <hp@pobox.com>

	* gtkdoc-fixxref.in, gtkdoc-mkdb.in, gtkdoc-mktmpl.in,
	gtkdoc-scan.in, gtkdoc-scangobj.in, gtkdoc-scanobj.in:	
	Added -*- cperl -*- magic, and --deprecated-guards
	option.

2001-01-23  Damon Chaplin  <damon@helixcode.com>

	* gtkdoc-scangobj.in: 
	* gtkdoc-scanobj.in: 
	* gtkdoc-scan.in: 
	* gtkdoc-mkdb.in: 
	* gtkdoc-mktmpl.in: changed so that they only update files when
	necessary (they write new versions of the files out, then use 'cmp'
	to compare with the existing versions to see if they have changed.)
	This should make it easier to do proper dependency rules in Makefiles,
	and it may cut down on CVS traffic.

	* gtkdoc-mkhtml.in: update a timestamp file (html.stamp) after running.
	* gtkdoc-mkdb.in: update a timestamp file (sgml.stamp) if any of the
	DocBook SGML files have been changed. So hopefully you can now use
	rules like this to avoid unnecessary regeneration of the HTML:

	all-local:
		$(MAKE) scan
		$(MAKE) templates
		$(MAKE) sgml
		$(MAKE) html.stamp
	
	html.stamp: sgml.stamp $(EXTRA_SGML_FILES)
		$(MAKE) html

	(I've tried this with the old GTK+ reference API docs and it seems to
	work well.)

	* gtkdoc-scangobj.in: 
	* gtkdoc-scanobj.in: 
	* gtkdoc-scan.in: 
	* gtkdoc-mkdb.in: 
	* gtkdoc-mktmpl.in:
	* gtkdoc-mkhtml.in:
	* gtkdoc-mkman.in:
	* gtkdoc-fixxref.in:
	Added '--version' command-line arg to all shell & perl scripts, so
	you can check for version 0.5 if you want to use the above rules.
	(If 0.4 is used make will probably complain about not knowing how to
	to build sgml.stamp.)

	* gtkdoc-common.pl.in: new file to contain shared routines.
	For now it just contains the UpdateFileIfChanged routine for the above.
	We can move the duplicated routines here in future, though the use of
	global variables makes this a bit awkward.

	* configure.in (PACKAGE_DATA_DIR): calculates the data dir and
	substitutes it so that the scripts know where gtkdoc-common.pl