@@ -797,7 +797,14 @@ $LD = $ENV{LD} ? $ENV{LD} : $CC;
 $CFLAGS = $ENV{CFLAGS} ? $ENV{CFLAGS} : "";
 $LDFLAGS = $ENV{LDFLAGS} ? $ENV{LDFLAGS} : "";
 
-$command = "$CC $CFLAGS -c -o $MODULE-scan.o $MODULE-scan.c && $LD -o $MODULE-scan $MODULE-scan.o $LDFLAGS";
+my $o_file;
+if ($CC =~ /libtool/) {
+  $o_file  = "$MODULE-scan.lo"
+} else {
+  $o_file = "$MODULE-scan.o"
+}
+
+$command = "$CC $CFLAGS -c -o $o_file $MODULE-scan.c && $LD -o $MODULE-scan $o_file $LDFLAGS";
 
 system($command) == 0 or die "Compilation of scanner failed\n";
 
